--- a/Task1.html
+++ b/Task1.html
@@ -18,11 +18,23 @@
     <script>
         let a = prompt("Enter Your name");
         let b = prompt("Enter Your age");
-        let c = prompt("Enter Your Martial Status: \n S for Single \n M for Married \n W for Widow");
+        var c = prompt("Enter Your Martial Status: \n S for Single \n M for Married \n W for Widow");
         b = Number(b);
         console.log("Name: ", a);
         console.log("Age: ", b);
-        console.log("Status: ", c);
+
+        if (c == "s" || c == "S") {
+            console.log("Status: Single",);
+
+        }
+        if (c == "m" || c == "M") {
+            console.log("Status: Married",);
+
+        }
+        if (c == "w" || c == "W") {
+            console.log("Status: Widow",);
+
+        }
 
 
     </script>
